<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/inputFragment">
    <fragment
        android:id="@+id/searchFragment"
        android:name="org.d3if3050.asesmen1.ui.search.SearchFragment"
        android:label="Cari"
        tools:layout="@layout/search_fragment" >
        <action
            android:id="@+id/action_searchFragment_to_galleryFragment"
            app:destination="@id/galleryFragment" />
    </fragment>
    <fragment
        android:id="@+id/inputFragment"
        android:name="org.d3if3050.asesmen1.ui.input.InputFragment"
        tools:layout="@layout/input_fragment"
        android:label="Tanam">
        <action
            android:id="@+id/action_inputFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_inputFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <action
            android:id="@+id/action_inputFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="org.d3if3050.asesmen1.ui.list.ListFragment"
        android:label="Daftar Tanaman"
        tools:layout="@layout/list_fragment"/>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if3050.asesmen1.ui.about.AboutFragment"
        android:label="Tentang kami"
        tools:layout="@layout/about_fragment"/>
    <fragment
        android:id="@+id/galleryFragment"
        android:name="org.d3if3050.asesmen1.ui.gallery.GalleryFragment"
        android:label="Galeri"
        tools:layout="@layout/gallery_list"/>
</navigation>